# strava

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: build_and_test.yml  built_and_test.yml
alembic/: env.py
alembic/versions/: 948412fd8c1a_create_route_table.py  fccefdbcd98e_added_route_table.py
k8s/: README.md  deployment.yaml
strava/: config.py  main.py
strava/db/: base.py  depends.py  session.py
strava/models/: route.py
strava/routes/: routes.py
strava/schemas/: __init__.py  routes.py
terraform/: .terraform.lock.hcl  README.md  eks-cluster.tf  main.tf  outputs.tf  security-groups.tf  variables.tf  vpc.tf
tests/: test_routes.py
