[tool.poetry]
name = "strava"
version = "0.1.0"
description = "A strava clone service for storing running, hiking and ski routes"
authors = ["martinabeleda <martin.abeleda@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
geojson-pydantic = "^0.4.3"
alembic = "^1.8.1"
shapely = "^1.8.5"
uvicorn = "^0.19.0"
GeoAlchemy2 = "^0.12.5"
psycopg2 = "^2.9.5"
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
pylint = "^2.15.5"
pytest-cov = "^4.0.0"
ipython = "^8.6.0"
httpx = "^0.23.0"
ruff = "^0.0.169"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
use_parentheses = true
known_first_party = "strava"
force_sort_within_sections = true

[tool.black]
max-line-length = 100
line-length = 100
